fix: shift wording to left to avoid clipping & randomize moving pizza.

--- a/views/css/inline_style.css
+++ b/views/css/inline_style.css
@@ -25,7 +25,7 @@ overflow:hidden
 }
 .row{
 margin-left:-15px;
-margin-right:-15px
+margin-right:-5px
 }
 .col-md-10,
 .col-md-12,
